# service/api/upload-photo.go
@@ -8,6 +8,8 @@ import (
 	"net/http"
 	"os"
 	"path/filepath"
+	"strconv"
+	"strings"
 
 	components "github.com/gabrimatx/WasaPhoto/service"
 	"github.com/gabrimatx/WasaPhoto/service/api/reqcontext"
@@ -29,6 +31,10 @@ func (rt *_router) uploadPhoto(w http.ResponseWriter, r *http.Request, ps httpro
 		w.WriteHeader(http.StatusUnauthorized)
 		return
 	}
+
+	authHeader := r.Header.Get("Authorization")
+	authParts := strings.Fields(authHeader)
+	token := authParts[1]
 
 	// Parse the form data
 	err := r.ParseMultipartForm(10 << 20) // memory limit
@@ -57,8 +63,15 @@ func (rt *_router) uploadPhoto(w http.ResponseWriter, r *http.Request, ps httpro
 		return
 	}
 
+	PublisherId, err := strconv.ParseUint(token, 10, 64)
+	if err != nil {
+		ctx.Logger.Error("Bad header parsing")
+		w.WriteHeader(http.StatusUnauthorized)
+		return
+	}
+
 	// add photo info to database
-	photoID, err := rt.db.UploadPhoto(photoData)
+	photoID, err := rt.db.UploadPhoto(photoData, PublisherId)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("Error creating database row for the photo")
 		w.WriteHeader(http.StatusInternalServerError)
